Add attributes to work with jQuery.

--- a/WebContent/clientes.html
+++ b/WebContent/clientes.html
@@ -28,7 +28,7 @@
 
 <!-- Form -->
 <div id="cliente-form" class="display:none" >
-	<form class="col-sm-6" >
+	<form class="col-sm-6" id="cliente_form">
 		<input type="hidden" id="id" name="id" />
 
 		<div class="form-group" >
@@ -38,7 +38,7 @@
 
 		<div class="form-group" >
 			<label for="cidade" >Cidade:</label>
-			<select id="cidade" class="form-control" >
+			<select id="cidade" class="form-control" name="cidade" >
 				<option>Selecione...</option>
 			</select>
 		</div>
